snippets/camunda-bpm-kubernetes/platform/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: camunda-bpm
  labels: {}
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector: {}
