snippets/camunda-bpm-kubernetes/platform/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: camunda-bpm
  annotations: {}
spec:
  rules: {}
  tls: {}
